Fikset problemer for ufoeretrygd #deploy-test-dolly-backend