@@ -6,22 +6,15 @@ import no.nav.dolly.domain.jpa.BestillingProgress;
 import no.nav.dolly.domain.jpa.TransaksjonMapping;
 import no.nav.dolly.domain.resultset.SystemTyper;
 import no.nav.dolly.repository.TransaksjonMappingRepository;
-import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.client.HttpClientErrorException;
 
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static java.util.Collections.emptyList;
 import static java.util.Objects.isNull;
-import static no.nav.dolly.domain.resultset.SystemTyper.AAREG;
-import static no.nav.dolly.domain.resultset.SystemTyper.DOKARKIV;
-import static no.nav.dolly.domain.resultset.SystemTyper.INNTKMELD;
-import static no.nav.dolly.domain.resultset.SystemTyper.PEN_AP;
-import static no.nav.dolly.domain.resultset.SystemTyper.SYKEMELDING;
+import static no.nav.dolly.domain.resultset.SystemTyper.*;
 import static org.apache.commons.lang3.StringUtils.isBlank;
 
 @Service
@@ -29,25 +22,15 @@ import static org.apache.commons.lang3.StringUtils.isBlank;
 public class TransaksjonMappingService {
 
     private final TransaksjonMappingRepository transaksjonMappingRepository;
-    private final BestillingProgressService bestillingProgressService;
     private final MapperFacade mapperFacade;
 
+    @Transactional(readOnly = true)
     public List<RsTransaksjonMapping> getTransaksjonMapping(String system, String ident, Long bestillingId) {
 
-        final List<BestillingProgress> progress = bestillingProgressService.fetchBestillingProgressByBestillingId(bestillingId);
-
-        if (isBlank(ident) && isNull(bestillingId)) {
-            throw new HttpClientErrorException(HttpStatus.BAD_REQUEST, "Søket trenger enten Ident eller BestillingId");
-        }
-        List<TransaksjonMapping> transaksjonMappingList =
-                transaksjonMappingRepository.findAllByBestillingIdAndIdent(bestillingId, ident).orElse(emptyList());
-        List<RsTransaksjonMapping> rsTransaksjonMappings = mapperFacade.mapAsList(
-                transaksjonMappingList.stream()
-                        .filter(transaksjon -> isBlank(system) || transaksjon.getSystem().equals(system))
-                        .collect(Collectors.toList()),
-                RsTransaksjonMapping.class);
-        rsTransaksjonMappings.forEach(transaksjon -> transaksjon.setStatus(!progress.isEmpty() ? hentSystemFeilFraBestillingProgress(progress, system) : null));
-        return rsTransaksjonMappings;
+        return transaksjonMappingRepository.findAllByBestillingIdAndIdent(bestillingId, ident).stream()
+                .filter(transaksjon -> isNull(system) || system.equals(transaksjon.getSystem()))
+                .map(transasjon -> mapperFacade.map(transasjon, RsTransaksjonMapping.class))
+                .toList();
     }
 
     public boolean existAlready(SystemTyper system, String ident, String miljoe) {
